[gd_scene load_steps=11 format=2]

[ext_resource path="res://rajzok/hatter.png" type="Texture" id=1]
[ext_resource path="res://Repulo.tscn" type="PackedScene" id=2]
[ext_resource path="res://halal.wav" type="AudioStream" id=3]
[ext_resource path="res://AkadalyLerako.gd" type="Script" id=4]
[ext_resource path="res://Jatek.gd" type="Script" id=5]
[ext_resource path="res://JatekIndito.gd" type="Script" id=6]
[ext_resource path="res://sigmar_one.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://pont.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 240 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 3
font_data = ExtResource( 7 )

[node name="Jatek" type="Node2D"]
script = ExtResource( 5 )

[node name="Hatter" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="AkadalyLerako" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="UjAkadaly" type="Area2D" parent="AkadalyLerako"]
position = Vector2( 95, 240 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AkadalyLerako/UjAkadaly"]
shape = SubResource( 1 )

[node name="AkadalyTorlo" type="Area2D" parent="AkadalyLerako"]
position = Vector2( -80, 240 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AkadalyLerako/AkadalyTorlo"]
shape = SubResource( 1 )

[node name="Repulo" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 240 )

[node name="JatekIndito" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pontszam" type="Label" parent="UI"]
anchor_right = 1.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PontszamHang" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="HalalHang" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="AkadalyLerako/UjAkadaly" to="AkadalyLerako" method="_on_UjAkadaly_area_entered"]
[connection signal="area_entered" from="AkadalyLerako/AkadalyTorlo" to="AkadalyLerako" method="_on_AkadalyTorlo_area_entered"]
[connection signal="area_entered" from="Repulo" to="." method="_on_Repulo_area_entered"]
[connection signal="finished" from="HalalHang" to="." method="_on_HalalHang_finished"]
